--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="#home">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#contato">Contato</a></li>
+                <p>Lorem </p>
             </ul>
         </nav>
     </header>
@@ -27,7 +28,7 @@
         </section>
         <section id="contato">
             <h2>Contato</h2>
-            <form action="/enviar" method="post">
+            <form action="/enviar" method="post">https://github.com/BNOHelipilot/projeto_1.git
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome">
                 <label for="email">Email:</label>
