--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#contato">Contato</a></li>
                 <p>Lorem </p>
+                <img src="assets/svgs/icon-user.svg">
             </ul>
         </nav>
     </header>
